--- a/musicwithfriends/appsettings.json
+++ b/musicwithfriends/appsettings.json
@@ -4,8 +4,5 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "musicwithfriendsContext": "Server=(localdb)\\mssqllocaldb;Database=musicwithfriendsContext-31e168c3-d936-4507-be66-f1999454e678;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
 }
