--- a/musicwithfriends/musicwithfriends.csproj
+++ b/musicwithfriends/musicwithfriends.csproj
@@ -5,9 +5,26 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20181201204308_IntitialCreate.cs" />
+    <Compile Remove="Migrations\20181201204308_IntitialCreate.Designer.cs" />
+    <Compile Remove="Migrations\20181201215105_migration2.cs" />
+    <Compile Remove="Migrations\20181201215105_migration2.Designer.cs" />
+    <Compile Remove="Migrations\20181201222307_migration3.cs" />
+    <Compile Remove="Migrations\20181201222307_migration3.Designer.cs" />
+    <Compile Remove="Migrations\20181201223359_migration4.cs" />
+    <Compile Remove="Migrations\20181201223359_migration4.Designer.cs" />
+    <Compile Remove="Migrations\20181201224335_migration5.cs" />
+    <Compile Remove="Migrations\20181201224335_migration5.Designer.cs" />
+    <Compile Remove="Migrations\20181201234337_migration6.cs" />
+    <Compile Remove="Migrations\20181201234337_migration6.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.1.4" />
     <PackageReference Include="SpotifyAPI.Web" Version="3.1.1" />
     <PackageReference Include="SpotifyAPI.Web.Auth" Version="3.1.1" />
   </ItemGroup>
